--- a/src/app/Components/Order/product-list/product-list.component.html
+++ b/src/app/Components/Order/product-list/product-list.component.html
@@ -1,21 +1,23 @@
-<div class="mb-3">
+<!-- <div class="mb-3">
   <label for="prodCat" class="form-label">Category:</label>
-  <!-- one way binding -->
-  <!-- <select #cat class="form-select " name="cat" id="prodCat" (change)="getSelectedCat(cat.value)"> -->
-  <!-- <select #cat class="form-select " name="cat" id="prodCat" (change)="getSelectedCat($event)"> -->
-  <!-- // in ts: event.target.value -->
-  <!-- // two way binding -->
+  one way binding
+  <select #cat class="form-select " name="cat" id="prodCat" (change)="getSelectedCat(cat.value)">
+  <select #cat class="form-select " name="cat" id="prodCat" (change)="getSelectedCat($event)">
+  // in ts: event.target.value
+  // two way binding
   <select
     class="form-select"
     name="cat"
     id="prodCat"
     [(ngModel)]="selectedCatID"
+    (change)="filterProdByCatID()"
   >
     <option *ngFor="let cat of catList" [value]="cat.id">{{ cat.name }}</option>
   </select>
-</div>
-<div class="test-secondary">[To be Removed] For test: {{ selectedCatID }}</div>
+</div> -->
+<div class="test-secondary">[To be Removed] For test: {{ sentCatID }}</div>
 <button class="btn btn-primary" (click)="changeSelectedCat()">Change</button>
+<br />fullDate Order's Date: {{ orderDate | date : "fullDate" }}
 <hr />
 <table class="table">
   <thead>
@@ -24,7 +26,8 @@
       <th>Name</th>
       <th>Image</th>
       <th>Av. Quantity</th>
-      <th>Price</th>
+      <th>Price In USD</th>
+      <th>Price In EGY</th>
       <th>Count</th>
       <th>Buy</th>
     </tr>
@@ -32,7 +35,7 @@
   <tbody>
     <ng-container
       *ngFor="
-        let prod of productList;
+        let prod of productListCat;
         let i = index;
         even as e;
         let o = odd;
@@ -51,7 +54,14 @@
       >
         <td>{{ i + 1 }}</td>
         <td>{{ prod.name }}</td>
-        <td><img [src]="prod.imgURL" alt="" /></td>
+        <td>
+          <img
+            [src]="prod.imgURL"
+            alt=""
+            LightBox="red"
+            defaultColor="yellow"
+          />
+        </td>
         <td>
           <!-- <div *ngIf="prod.quantity != 0">{{ prod.quantity }}</div>
           <div *ngIf="prod.quantity == 0">Out Of Stock</div> -->
@@ -66,7 +76,8 @@
             <div *ngSwitchDefault="">{{ prod.quantity }}</div>
           </ng-container>
         </td>
-        <td>{{ prod.price }}</td>
+        <td>{{ prod.price | currency : "EUR" : "symbol" }}</td>
+        <td>{{ prod.price | USDtoEGP : 30 | currency : "EGP" : "code" }}</td>
         <!-- Template variables -->
         <td><input #itemsCount type="number" class="form-control" /></td>
         <td>
@@ -83,4 +94,4 @@
   </tbody>
 </table>
 <hr />
-<h3>Order Total Price: {{ orderTotalPrice }}</h3>
+<h3 class="text-danger">Order Total Price: {{ orderTotalPrice }}</h3>
