--- a/src/app/Components/Order/order-master/order-master.component.html
+++ b/src/app/Components/Order/order-master/order-master.component.html
@@ -12,14 +12,29 @@
     id="prodCat"
     [(ngModel)]="selectedCatID"
   >
+    <option value="0" selected>All</option>
     <option *ngFor="let cat of catList" [value]="cat.id">{{ cat.name }}</option>
   </select>
 </div>
 <hr />
 <div class="bg-warning">
-  <app-product-list [sentCatID]="selectedCatID"></app-product-list>
+  <!-- <app-product-list
+    [sentCatID]="selectedCatID"
+    (totalPriceChanged)="onTotalPriceChanged($event)"
+  ></app-product-list> -->
+  <app-product-list
+    [sentCatID]="selectedCatID"
+    (totalPriceChanged)="onTotalPriceChanged($event)"
+  ></app-product-list>
+</div>
+<hr />
+<div>
+  <h3>Enter Your Name:</h3>
+  <input #clientNameInput type="text" class="form-control" />
 </div>
 <h3>
   [To be Removed] For test: <br />
-  Order Total Price: {{ orderTotalPrice }}
+  Order Total Price: {{ orderTotalPrice | currency }}
 </h3>
+<hr />
+<button class="btn btn-success" (click)="completeOrder()">Place Holder</button>
