--- a/src/app/Components/Order/product-list/product-list.component.html
+++ b/src/app/Components/Order/product-list/product-list.component.html
@@ -88,10 +88,11 @@
           >
             Buy
           </button>
+          <!-- <button type="button" class="btn btn-secondary">Buy</button> -->
         </td>
       </tr>
     </ng-container>
   </tbody>
 </table>
-<hr />
-<h3 class="text-danger">Order Total Price: {{ orderTotalPrice }}</h3>
+<!-- <hr /> -->
+<!-- <h3 class="text-danger">Order Total Price: {{ orderTotalPrice }}</h3> -->
