--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,16 @@
 <!-- <h1>Hello World! {{ title }}</h1> -->
 <!-- <h1>{{ sayHello() }}</h1> -->
 <app-header></app-header>
-<div class="container-fluid ps-0">
+<!-- <div class="container-fluid ps-0">
   <section class="row">
     <app-sidebar class="col-2"></app-sidebar>
-    <!-- <app-home class="col-10"></app-home> -->
-    <!-- <app-product-list class="col-10"></app-product-list> -->
+    <app-home class="col-10"></app-home>
+    <app-product-list class="col-10"></app-product-list>
     <app-order-master class="col-10"></app-order-master>
+    <div class="col-10">
+      <router-outlet></router-outlet>
+    </div>
   </section>
-</div>
+</div> -->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
