--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -36,8 +36,21 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/login" routerLinkActive="active"
+          <a
+            class="nav-link"
+            [hidden]="isUserLogged"
+            routerLink="/login"
+            routerLinkActive="active"
             >Login</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            [hidden]="!isUserLogged"
+            routerLink="/logout"
+            routerLinkActive="active"
+            >Logout</a
           >
         </li>
       </ul>
