--- a/src/app/Components/Order/add-product/add-product.component.html
+++ b/src/app/Components/Order/add-product/add-product.component.html
@@ -1,3 +1,89 @@
-<button class="btn btn-success m-3" role="button" (click)="addProduct()">
-  Save
-</button>
+<!-- <button type="submit" class="btn btn-primary" (click)="addProduct()">Submit</button> -->
+<div class="text-danger">
+  <h3>[To be removed for test]</h3>
+
+  <div>
+    {{ newProd | json }}
+  </div>
+</div>
+
+<div>
+  <!-- {{ prodNameInp.className }} -->
+</div>
+<hr />
+<form #prodForm="ngForm" (ngSubmit)="addProduct()">
+  <div class="mb-3">
+    <label for="pName" class="form-label">Product Name</label>
+    <input
+      #prodNameInp="ngModel"
+      type="text"
+      class="form-control"
+      name="prodname"
+      required
+      pattern="[A-Za-z]{3,}"
+      id="pName"
+      [(ngModel)]="newProd.name"
+    />
+  </div>
+
+  <div
+    class="alert alert-warning"
+    [hidden]="prodNameInp.valid || prodNameInp.untouched"
+  >
+    <small *ngIf="prodNameInp.errors?.['required']">Name is required</small>
+    <small *ngIf="prodNameInp.errors?.['pattern']"
+      >Name must be 3 character at least</small
+    >
+  </div>
+
+  <div class="mb-3">
+    <label for="pPrice" class="form-label">Product Price</label>
+    <input
+      type="number"
+      class="form-control"
+      name="prodprice"
+      id="pPrice"
+      [(ngModel)]="newProd.price"
+    />
+  </div>
+
+  <div class="mb-3">
+    <label for="pQuantity" class="form-label">Product Quantity</label>
+    <input
+      type="number"
+      class="form-control"
+      name="prodquantity"
+      id="pQuantity"
+      [(ngModel)]="newProd.quantity"
+    />
+  </div>
+
+  <div class="mb-3">
+    <label for="pQuantity" class="form-label">Product Category</label>
+    <select
+      class="form-select"
+      name="cat"
+      id="prodCat"
+      [(ngModel)]="newProd.categoryID"
+    >
+      <option *ngFor="let cat of catList" [value]="cat.id">
+        {{ cat.name }}
+      </option>
+    </select>
+  </div>
+
+  <div class="mb-3">
+    <label for="pImg" class="form-label">Product Image</label>
+    <input
+      type="file"
+      class="form-control"
+      name="prodimage"
+      id="pImg"
+      [(ngModel)]="newProd.imgURL"
+    />
+  </div>
+
+  <button [disabled]="prodForm.invalid" type="submit" class="btn btn-primary">
+    Submit
+  </button>
+</form>
