--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -47,6 +47,15 @@
         <li class="nav-item">
           <a
             class="nav-link"
+            [hidden]="isUserLogged"
+            routerLink="/register"
+            routerLinkActive="active"
+            >Register</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
             [hidden]="!isUserLogged"
             routerLink="/logout"
             routerLinkActive="active"
